--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Heebo";
+  color: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  color: #fa5788;
+  font-size: 50px;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-container {
+  display: flex;
+  gap: 10px;
+  padding: 20px;
+}
+
+.completed{
+  color: #fa5788;
+}
+
+.list-container{
+  display: flex;
+}
+
+#todo-container{
+  flex: 1;
+  margin-right: 40px;
+  margin-left: 40px;
+  background-color: rgba(255, 182, 193, 0.5);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+#todo-container h2{
+  white-space: nowrap;
+  font-family: 'DM Sans', sans-serif;
+  text-transform: uppercase;
+}
+
+.completed span{
+  color: #fa5788;
+  margin-right: 10px;
 }
